k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: ms-keycloak-service
      port:
        number: 8082
  ingressClassName: ms-ingress
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-keycloak-service
                port:
                  number: 8082
#    - host: microservices.info
#      http:
#        paths:
#          - path: /applications
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: ms-admin
#                port:
#                  number: 8081
